--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,12 @@ header {
   text-align:center;
 }
 
+.hero{
+  min-height: 32px;
+  max-height: 340px;
+  width: auto;
+}
+
 h1,h2,h3,h4,h5,h6 {
   font-weight:bold;
 }
