--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,14 @@ header {
 }
 
 .hero{
-  min-height: 250px;
   max-height: 340px;
   width: auto;
+}
+
+@media (max-width: 767px){
+  .hero{
+    max-height: 230px;
+  }
 }
 
 h1,h2,h3,h4,h5,h6 {
