--- a/css/main.css
+++ b/css/main.css
@@ -16,12 +16,6 @@ header {
   width: auto;
 }
 
-@media (max-width: 460px){
-  .hero{
-    max-height: 230px;
-  }
-}
-
 h1,h2,h3,h4,h5,h6 {
   font-weight:bold;
 }
@@ -215,12 +209,17 @@ th,td {
     padding:10px;
   }
 
+  .hero{
+    max-height: 230px;
+  }
+
   section > h2 {
     font-size:16px;
   }
 
   section > h2 > strong {
     float:right;
+    line-height: 0;
   }
 
   section > h2 > small {
