Made it mobile responsive for fun

--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,12 @@ body {
 header {
     background: white;
     text-align: center;
+    position: relative;
 }
 .hero {
-    max-height: 340px;
     width: auto;
-    margin-top: 20px;
+    max-width: 75%;
+    margin: 20px auto;
     border: 3px solid #414A52;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -180,14 +181,16 @@ th, td {
     .content {
         padding: 10px;
     }
-    .hero {
-        max-height: 230px;
+    h1{
+        font-size: 22px;
+        margin-top: 0px;
+        padding: 20px 20px 0;
+        line-height: 20px;
     }
     section> h2 {
         font-size: 16px;
     }
     section> h2> strong {
-        float: right;
         line-height: 0;
     }
     section> h2> small {
@@ -220,5 +223,8 @@ th, td {
     }
     .nowrap {
         white-space: normal;
+    }
+    .bullets li{
+      font-size:12px;
     }
 }
