Smarter mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ header {
     background: white;
     text-align: center;
     position: relative;
+    padding-top: 10px;
 }
 .hero {
     width: auto;
@@ -178,8 +179,12 @@ th, td {
     }
 }
 @media(max-width: 480px) {
+    .hero{
+        max-width:90%;
+    }
     .content {
         padding: 10px;
+        width:100%;
     }
     h1{
         font-size: 22px;
