--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ section.closed .section-content {
 .section-content {
     background: #FBD334;
     color: black;
-    padding: 15px;
+    padding: 10px 20px;
     overflow: hidden;
     max-height: 1000px;
     -webkit-transition: all 500ms cubic-bezier(0.150, 0.875, 0.370, 0.990);
@@ -169,6 +169,9 @@ th, td {
     line-height: 28px;
 }
 @media(max-width: 1064px) {
+    .hero{
+      max-width: 85%;
+    }
     .container {
         width: 100%;
     }
