--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ header {
 .hero {
     width: auto;
     max-width: 75%;
-    margin: 20px auto;
+    margin: 0px auto;
     border: 3px solid #414A52;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -39,9 +39,7 @@ ul.inline li:last-child {
     padding-right: 0;
 }
 h1 {
-    border-top: 1px solid #ECECEC;
     font-size: 32px;
-    margin-top: 20px;
     padding: 20px;
     line-height: 20px;
 }
@@ -51,7 +49,6 @@ span {
     line-height: 2;
 }
 .subheader {
-    color: #636466;
     line-height: 50px;
 }
 strong {
@@ -120,9 +117,10 @@ section.closed .section-content {
 .section-content {
     background: #FBD334;
     color: black;
-    padding: 10px 20px;
+    padding: 20px 30px;
     overflow: hidden;
     max-height: 1000px;
+    position: relative;
     -webkit-transition: all 500ms cubic-bezier(0.150, 0.875, 0.370, 0.990);
     -moz-transition: all 500ms cubic-bezier(0.150, 0.875, 0.370, 0.990);
     -o-transition: all 500ms cubic-bezier(0.150, 0.875, 0.370, 0.990);
@@ -130,6 +128,9 @@ section.closed .section-content {
 }
 .section-content h3 {
     margin-bottom: 10px;
+    padding: 0 20px 5px;
+    border-bottom: 1px solid black;
+    display: inline-block;
 }
 .section-content ul {
     border-bottom: 1px solid #F9C120;
@@ -190,10 +191,11 @@ th, td {
         width:100%;
     }
     h1{
-        font-size: 22px;
-        margin-top: 0px;
-        padding: 20px 20px 0;
-        line-height: 20px;
+      font-size: 22px;
+      margin-top: 0px;
+      padding: 15px;
+      margin-bottom: -20px;
+      line-height: 20px;
     }
     section> h2 {
         font-size: 16px;
@@ -234,5 +236,8 @@ th, td {
     }
     .bullets li{
       font-size:13px;
+    }
+    .subheader{
+      display: none;
     }
 }
